# Speact-backend

./: .gitignore  README.md  action_transformer.py  app.py  models_loader.py  pyproject.toml  real_encoder_decoder_training.py  try.py
DialogueBot/: graph_encoder.ipynb  train.ipynb
DialogueBot/DialogueManager/: agent.py  constants.json  dialogue_config.py  error_model_controller.py  state_tracker.py  train.py  user.py  user_simulator.py  utils.py
DialogueBot/DialogueManager/FileBrowserDM/: agent.py  constants.json  errors.py  file_tree_sim.py  intent_tracker.py  nlg.py  state_tracker.py  train.py  user_simulator.py  utils.py
DialogueBot/Ontologies/: graph.py  onto_fbrowser.py  python_from_ontology.py
DialogueBot/Ontologies/OwlFiles/: onto_browser.owl
models/: m50_beh.h5
resources/: constants.json  train_intents.json
