[project]
name = "speact-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.7.9"
dependencies = [
    "flask",
    "flask-cors",
    "keras==2.2.4",
    "h5py<3",
    "numpy",
    "protobuf==3.20.0",
    "rdflib==4.2.2",
    "tensorflow==1.13.2",
    "gensim>=4.2.0",
    "nltk>=3.8.1",
]
